# libsecp256k1-0

./: .gitignore  README.md  pyproject.toml  setup.cfg
src/libsecp256k1/: __init__.py  __main__.py  compile.sh  helper.sh  libsecp256k1.py  local_compiler.sh  main.py  make_libsecp265k1.sh
src/libsecp256k1/compiled/unix/: libsecp256k1.so.0
src/libsecp256k1/data/: default.json
src/libsecp256k1/docker/: Dockerfile  compiler.sh  helper.sh  make_libsecp265k1.sh
src/libsecp256k1/utils/: crawler.py  docker.py  dockerhelper.py
src/libsecp256k1_0/: __init__.py  __main__.py  libsecp256k1.py  local_compiler.sh  main.py
src/libsecp256k1_0/compiled/darwin/: libsecp256k1.0.dylib
src/libsecp256k1_0/docker/: Dockerfile  compiler.sh  helper.sh  make_libsecp256k1.sh  require.sh
src/libsecp256k1_0/utils/: crawler.py  docker.py
test/: test_main.py
