[metadata]
name = libsecp256k1-0
version = 0.2.0
author = Arctic
author_email = arctic.technology.mail@gmail.com
license = MIT
description = Compiled libsecp256k1 python package.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = bitcoin, cryptography, ecdsa
url = https://github.com/ArcticTechnology/libsecp256k1-0
classifiers =
	Development Status :: 5 - Production/Stable
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	Intended Audience :: Information Technology
	Intended Audience :: Financial and Insurance Industry
	Topic :: Security
	Topic :: Security :: Cryptography

[options]
python_requires = >=3.8
package_dir = =src
packages = find:

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
	libsecp-compile = libsecp256k1_0.main:main

[options.package_data]
libsecp256k1_0 =
	compiled/unix/*.so.0
	compiled/win32bit/*.dll
	compiled/win64bit/*.dll
	docker/Dockerfile
	docker/*.sh
	*.sh